@@ -1,3 +1,15 @@
+2010-08-06  MIYAMUKO Katsuyuki
+
+	* (json-value): 指定したキーの json データを取得する。
+	json-values は複数のキーを指定して多値で取得する関数だが
+	json-value はひとつのキーを指定してひとつの値を取得する関数。
+	---
+	(let ((json (json:json-decode (xhr:xhr-get "http://b.hatena.ne.jp/entry/json/http://common-lisp.net/project/cl-json/"
+	                                           :key 'xhr:xhr-response-text))))
+	  (json:json-value json `("count" ,#'parse-integer)) ;;=> 3
+	  (json:json-value json "title") ;;=> "CL-JSON"
+	  )
+
 2010-08-04  MIYAMUKO Katsuyuki
 
 	* (json-values): 指定したキーの json データを取得する。
